--- a/transcription-server/requirements.txt
+++ b/transcription-server/requirements.txt
@@ -4,3 +4,9 @@ python-dotenv
 requests
 supabase
 yt-dlp
+faster-whisper==1.0.3
+ctranslate2>=4.3.1
+tokenizers>=0.15.0
+sentencepiece>=0.1.99
+huggingface_hub==0.23.1
+certifi>=2024.7.4
